--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4",
     "classnames": "^2.2.6",
     "postcss-nested": "^3.0.0",
     "postcss-preset-env": "^5.3.0",
-    "postcss-smart-import": "^0.7.6"
+    "postcss-smart-import": "^0.7.6",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-responsive": "^5.0.0",
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
