--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "react-dom": "^16.5.2",
     "react-flexbox-grid": "^2.1.2",
     "react-responsive": "^5.0.0",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0",
+    "react-redux": "5.1.0",
+    "redux": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
